--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <caption>Закуски</caption>
                 <tr><td>Сырная тарелка..................................................250гр./<strong>350р.</strong></td></tr>
                 <tr><td class="opis">Моцарелла, пармезан, дор-блю</td></tr>
-                <tr class="left"><td>Креветки к пиву в кисло-сладком соус.......370гр./<strong>400р.</strong></td></tr>
+                <tr class="left"><td>Креветки к пиву в кисло-сладком соусе.....370гр./<strong>400р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
                 <tr><td>Овощная тарелка...............................................230гр./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Помидоры, свежие огурцы, салат, болгарский перец, зелень</td></tr>
@@ -41,7 +41,7 @@
                 <caption>Бургеры</caption>
                 <tr><td>Магистр наук........................................................400гр./<strong>350р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, томат, сыр эменталлер,<br>соус Тар-тар, соус сырный, картофель фри</td></tr>
-                <tr><td>Угольный эксперемент.....................................400гр./<strong>300р.</strong></td></tr>
+                <tr><td>Угольный экспиремент.....................................400гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, огурец маринованный, томат,<br>сыр эменталлер, соус Тар-тар, соус брусничный, картофель фри</td></tr>
             </table>
             <br>
@@ -88,13 +88,13 @@
             <table>
                 <caption>Супы</caption>
                 <tr><td>Том-Ям................................................................300гр./<strong>350р.</strong></td></tr>
-                <tr><td class="opis">Кольца кальмара, мидии в створках, королевские креветки,<br> морской гребешок, филе дорадо, лимонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи</td></tr>
+                <tr><td class="opis">Кольца кальмара, мидии в створках, королевские креветки,<br> морской гребешок, филе дорадо, лемонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи</td></tr>
                 <tr><td>Грибной..............................................................300гр./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">Лук, шампиньоны, сливки, куриный бульон</td></tr>
                 <tr><td>Чечевичный.......................................................300гр./<strong>200р.</strong></td></tr>
                 <tr><td class="opis">Чечевица, картофель, морковь, чеснок, лук</td></tr>
                 <tr><td>Лапша.................................................................300гр./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Куринный бульон, лапша домашняя, куриное филе, яйцо, зулень</td></tr>
+                <tr><td class="opis">Куринный бульон, лапша домашняя, куриное филе, яйцо, зелень</td></tr>
                 <tr><td>Солянка..............................................................300гр./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Говядина по-европейски, салями, курица, томатная паста,<br> маслины, маринованные огурцы, лук</td></tr>
             </table>
@@ -102,8 +102,8 @@
             <table>
                 <caption>Горячее</caption>
                 <tr><td>Белковый наполнитель....................................300гр./<strong>320р.</strong></td></tr>
-                <tr><td class="opis">Куриное филе, баклажан, цуккини, перец болгарский, томат <br>шампиньоны, соус брусничный</td></tr>
-                <tr><td>Бефстрогонов с пюре........................................350гр./<strong>350р.</strong></td></tr>
+                <tr><td class="opis">Куриное филе, баклажан, цукини, перец болгарский, томат <br>шампиньоны, соус брусничный</td></tr>
+                <tr><td>Бефстроганов с пюре........................................350гр./<strong>350р.</strong></td></tr>
                 <tr><td class="opis">Говяжья вырезка, шампиньоны, картофель, шпинат,<br>лук, соус Демиглас</td></tr>
                 <tr><td>Эффект открытия.............................................250гр./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Говяжья котлета, спаржа, бекон, брусничный соус</td></tr>
@@ -125,7 +125,7 @@
             <table>
                 <caption>Коктейли</caption>
                 <tr><td>Глюкоза.............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Спрайт, лимон, лайм, лимонный сок, грейпфрутовый сок,<br> сироп блюкюрасао, лед</td></tr>
+                <tr><td class="opis">Спрайт, лимон, лайм, лимонный сок, грейпфрутовый сок,<br> сироп Блю Кюрасао, лед</td></tr>
                 <tr><td>Аскорбинка......................................................250мл./<strong>170р.</strong></td></tr>
                 <tr><td class="opis">Клюквенный сок, анансовый сок, лед, мята, сироп</td></tr>
                 <tr><td>Фруктоза..........................................................250мл./<strong>250р.</strong></td></tr>
