--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <tr><td>Клюква и годжи..........................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Зеленый чай с добавлением ягод клюквы и годжи</td></tr>
                 <tr><td>Дикая вишня................................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Зеленый чай с ягодами сплой вишни, коюквы, <br>листьями клубники и грецкого ореха</td></tr>
+                <tr><td class="opis">Зеленый чай с ягодами спелой вишни, коюквы, <br>листьями клубники и грецкого ореха</td></tr>
                 <tr><td>Сказочный....................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Зеленый чай с кусочками клюквы, клубники и лепестками роз</td></tr>
                 <tr><td>Жасминовый...............................................800мл./<strong>270р.</strong></td></tr>
