--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <tr><td>Клюква и годжи..........................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Зеленый чай с добавлением ягод клюквы и годжи</td></tr>
                 <tr><td>Дикая вишня................................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Зеленый чай с ягодами спелой вишни, коюквы, <br>листьями клубники и грецкого ореха</td></tr>
+                <tr><td class="opis">Зеленый чай с ягодами спелой вишни, клюквы, <br>листьями клубники и грецкого ореха</td></tr>
                 <tr><td>Сказочный....................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Зеленый чай с кусочками клюквы, клубники и лепестками роз</td></tr>
                 <tr><td>Жасминовый...............................................800мл./<strong>270р.</strong></td></tr>
@@ -222,7 +222,7 @@
                 <tr><td>Цирконий.......................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Молоко, мороженое, сироп карамель, киви, банан</td></tr>
                 <tr><td>Олово...............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Мороженное, молоко, ореховый сироп, орео, какао</td></tr>
+                <tr><td class="opis">Мороженое, молоко, ореховый сироп, орео, какао</td></tr>
                 <tr><td>Родий...............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Мороженое, молоко, ежевика, взбитые сливки</td></tr>
             </table>
