--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <br>
             <table>
                 <caption>Сендвичи</caption>
-                <tr><td>Двойные связи...................................................350гр/<strong>320р.</strong></td></tr>
+                <tr><td>Двойные связи..................................................350гр./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Хлеб harry's, куриное филе, бекон, капуста пекинская, томат, <br>огурец, яйцо, сыр </td></tr>
-                <tr><td>Углеродные цепи...............................................350р./<strong>300р.</strong></td></tr>
+                <tr><td>Углеродные цепи.............................................350гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">Хлеб harry's, говяжья котлета, яйцо, сыр эменталлер,<br> томат, соус Тар-тар, соус барбекю, картофель фри</td></tr>
             </table>
             <br>
@@ -41,7 +41,7 @@
                 <caption>Бургеры</caption>
                 <tr><td>Магистр наук........................................................400гр./<strong>350р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, томат, сыр эменталлер,<br>соус Тар-тар, соус сырный, картофель фри</td></tr>
-                <tr><td>Угольный экспиремент.....................................400гр./<strong>300р.</strong></td></tr>
+                <tr><td>Угольный эксперимент.....................................400гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, огурец маринованный, томат,<br>сыр эменталлер, соус Тар-тар, соус брусничный, картофель фри</td></tr>
             </table>
             <br>
@@ -52,7 +52,7 @@
                 <tr><td>Пеперони............................................................400гр./<strong>370р.</strong></td></tr>
                 <tr><td class="opis">Соус, салями, помидоры, болгарский перец, моцарелла</td></tr>
                 <tr><td>Четыре сыра......................................................400гр./<strong>450р.</strong></td></tr>
-                <tr><td class="opis">Соус, сыр чеддер, пармезан, моцарелла, дор-блю,<br> провансике травы</td></tr>
+                <tr><td class="opis">Соус, сыр чеддер, пармезан, моцарелла, дор-блю,<br> прованские травы</td></tr>
                 <tr><td>Четыре сезона..................................................400гр./<strong>400р.</strong></td></tr>
                 <tr><td class="opis">Грибы, помидоры, салями, курица, моцарелла, соус</td></tr>
                 <tr><td>Гавайская...........................................................400гр./<strong>370р.</strong></td></tr>
@@ -80,7 +80,7 @@
                 <tr><td>Болоньезе.............................................................300гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">Лук, говяжий фарш, свежие томаты, морковь, томатная паста, чеснок</td></tr>
                 <tr><td>С курицей и грибами........................................300гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">Куринное филе, лук, шампиньоны, сливки, сыр, базилик</td></tr>
+                <tr><td class="opis">Куриное филе, лук, шампиньоны, сливки, сыр, базилик</td></tr>
                 <tr><td>С морепродуктами............................................300гр./<strong>390р.</strong></td></tr>
                 <tr><td class="opis">Креветки королевские, мидии в створках, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр, помидоры черри</td></tr>
             </table>
@@ -94,7 +94,7 @@
                 <tr><td>Чечевичный.......................................................300гр./<strong>200р.</strong></td></tr>
                 <tr><td class="opis">Чечевица, картофель, морковь, чеснок, лук</td></tr>
                 <tr><td>Лапша.................................................................300гр./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Куринный бульон, лапша домашняя, куриное филе, яйцо, зелень</td></tr>
+                <tr><td class="opis">Куриный бульон, лапша домашняя, куриное филе, яйцо, зелень</td></tr>
                 <tr><td>Солянка..............................................................300гр./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Говядина по-европейски, салями, курица, томатная паста,<br> маслины, маринованные огурцы, лук</td></tr>
             </table>
@@ -102,7 +102,7 @@
             <table>
                 <caption>Горячее</caption>
                 <tr><td>Белковый наполнитель....................................300гр./<strong>320р.</strong></td></tr>
-                <tr><td class="opis">Куриное филе, баклажан, цукини, перец болгарский, томат <br>шампиньоны, соус брусничный</td></tr>
+                <tr><td class="opis">Куриное филе, баклажан, цукини, перец болгарский, томат, <br>шампиньоны, соус брусничный</td></tr>
                 <tr><td>Бефстроганов с пюре........................................350гр./<strong>350р.</strong></td></tr>
                 <tr><td class="opis">Говяжья вырезка, шампиньоны, картофель, шпинат,<br>лук, соус Демиглас</td></tr>
                 <tr><td>Эффект открытия.............................................250гр./<strong>320р.</strong></td></tr>
@@ -135,7 +135,7 @@
                 <tr><td>Кальциум..........................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Апельсиновый сок, сироп маракуйя, содовая,<br>сок лайма, сок лимона, апельсин, мята, лед</td></tr>
                 <tr><td>Каогуляция.......................................................250мл/<strong>300р.</strong></td></tr>
-                <tr><td class="opis">Сироп клубника, апельсиновый сок, <br>ананасовый сок, кофе эспрессо</td></tr>
+                <tr><td class="opis">Сироп клубника, апельсиновый сок, <br>ананасовый сок</td></tr>
                 <tr><td>Феррум..............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Виноградный сок, сироп сахар, лайм, содовая, лед</td></tr>
                 <tr><td>Витамин А........................................................250мл./<strong>300р.</strong></td></tr>
@@ -157,14 +157,14 @@
                 <tr><td class="opis">Грейпфрут, мята, мед, лед</td></tr>
                 <tr><td>Малахит............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Персиковый сок, киви, сахарная пудра, корица</td></tr>
-                <tr><td >Александрид....................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td >Александрит....................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Малина, груша, яблоко, молоко, мед</td></tr>
             </table>
             <br>
             <table>
                 <caption>Фруктовый чай</caption>
                 <tr><td>Нахальный фрукт.......................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Фруктовая смесь из кусочков ананаса и папайи в сахаре,<br> яблок, изюма, плодов шиповника, ягод вишни<br>с добавлением лепестков кракаде </td></tr>
+                <tr><td class="opis">Фруктовая смесь из кусочков ананаса и папайи в сахаре,<br> яблок, изюма, плодов шиповника, ягод вишни<br>с добавлением лепестков каркаде </td></tr>
                 <tr><td>Каркаде..........................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Арабский чайный напиток из цветков суданской розы</td></tr
                 <tr><td>Райское яблоко............................................800мл./<strong>270р.</strong></td></tr>
