--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <tr><td>Нахальный фрукт.......................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Фруктовая смесь из кусочков ананаса и папайи в сахаре,<br> яблок, изюма, плодов шиповника, ягод вишни<br>с добавлением лепестков каркаде </td></tr>
                 <tr><td>Каркаде..........................................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Арабский чайный напиток из цветков суданской розы</td></tr
+                <tr><td class="opis">Арабский чайный напиток из цветков<br> суданской розы</td></tr
                 <tr><td>Райское яблоко............................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Фруктово-травяная смесь из кусочков яблок, ананаса, изюма,<br>с добавлением гибискуса и листьев бамбука</td></tr>
                 <tr><td>Тропики........................................................800мл./<strong>270р.</strong></td></tr>
@@ -186,7 +186,7 @@
                 <tr><td>Дикая вишня................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Зеленый чай с ягодами спелой вишни, клюквы, <br>листьями клубники и грецкого ореха</td></tr>
                 <tr><td>Сказочный....................................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Зеленый чай с кусочками клюквы, клубники и лепестками роз</td></tr>
+                <tr><td class="opis">Зеленый чай с кусочками клюквы, клубники<br> и лепестками роз</td></tr>
                 <tr><td>Жасминовый...............................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Китайский зеленый чай с цветами жасмин</td></tr>
             </table>
@@ -194,15 +194,15 @@
             <table>
                 <caption>Черный чай</caption>
                 <tr><td>Английский завтрак..................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Купаж отборных сортов кинийского, индийского и цейлонского чая</td></tr>
+                <tr><td class="opis">Купаж отборных сортов кинийского, индийского<br> и цейлонского чая</td></tr>
                 <tr><td>Эрл грей........................................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Черный чай с добавлением натурального масла бергамота</td></tr>
+                <tr><td class="opis">Черный чай с добавлением натурального<br> масла бергамота</td></tr>
                 <tr><td>Дикая вишня...............................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Черный чай с добавлением ягод вишни и листьев клубники</td></tr>
+                <tr><td class="opis">Черный чай с добавлением ягод вишни<br> и листьев клубники</td></tr>
                 <tr><td>Тысяча и одна ночь...................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Купаж черного и зеленого чая с добавлением изюма, кусочков папайи,<br> лепестков василька, розы и подсолнечника</td></tr>
                 <tr><td>Шоколадный...............................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Черный чай с добавлением кусочков шоколада и какао</td></tr>
+                <tr><td class="opis">Черный чай с добавлением кусочков<br> шоколада и какао</td></tr>
                 <tr><td>Пуэр..............................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Классический китайский черный пуэр</td></tr>
                 <tr><td>Вишнёвый пуэр.........................................800мл./<strong>270р.</strong></td></tr>
@@ -220,11 +220,11 @@
                 <tr><td>Бром.................................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Клубника, молоко, банан, сироп малина</td></tr>
                 <tr><td>Цирконий.......................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Молоко, мороженое, сироп карамель, киви, банан</td></tr>
+                <tr><td class="opis">Молоко, мороженое, сироп карамель,<br> киви, банан</td></tr>
                 <tr><td>Олово...............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Мороженое, молоко, ореховый сироп, орео, какао</td></tr>
+                <tr><td class="opis">Мороженое, молоко, ореховый сироп,<br> орео, какао</td></tr>
                 <tr><td>Родий...............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Мороженое, молоко, ежевика, взбитые сливки</td></tr>
+                <tr><td class="opis">Мороженое, молоко, ежевика,<br> взбитые сливки</td></tr>
             </table>
             <table>
                 <caption>Пиво</caption>
