--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                 <tr><td>С курицей и грибами........................................300гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">Куриное филе, лук, шампиньоны, сливки, сыр, базилик</td></tr>
                 <tr><td>С морепродуктами............................................300гр./<strong>390р.</strong></td></tr>
-                <tr><td class="opis">Креветки королевские, мидии в створках, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр, помидоры черри</td></tr>
+                <tr><td class="opis">Креветки королевские, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр, помидоры черри</td></tr>
             </table>
             <br>
             <table>
                 <caption>Супы</caption>
                 <tr><td>Том-Ям................................................................300гр./<strong>350р.</strong></td></tr>
-                <tr><td class="opis">Кольца кальмара, мидии в створках, королевские креветки,<br> морской гребешок, филе дорадо, лемонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи</td></tr>
+                <tr><td class="opis">Кольца кальмара, королевские креветки, морской гребешок,<br> филе дорадо, лемонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи,<br>лук, картофель, шампиньоны</td></tr><br>
                 <tr><td>Грибной..............................................................300гр./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">Лук, шампиньоны, сливки, куриный бульон</td></tr>
                 <tr><td>Чечевичный.......................................................300гр./<strong>200р.</strong></td></tr>
@@ -107,7 +107,8 @@
                 <tr><td class="opis">Говяжья вырезка, шампиньоны, картофель, шпинат,<br>лук, соус Демиглас</td></tr>
                 <tr><td>Эффект открытия.............................................250гр./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Говяжья котлета, спаржа, бекон, брусничный соус</td></tr>
-                <tr><td>Дорадо на гриле..................................................100гр./<strong>220р.</strong></td></tr>
+                <tr><td>Дорадо на гриле................................................700гр./<strong>1500р.</strong></td></tr>
+                <tr><td class="opis"></td></tr>
             </table>
             <br>
             <table>
@@ -139,9 +140,9 @@
                 <tr><td>Феррум..............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Виноградный сок, сироп сахар, лайм, содовая, лед</td></tr>
                 <tr><td>Витамин А........................................................250мл./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">Апельсиновый сок, мороженое, вишневый сок,<br>содовая, лед</td></tr>
+                <tr><td class="opis">Апельсиновый сок, вишневый сок,<br>содовая, лед</td></tr>
                 <tr><td>Витамин С.......................................................250мл./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">Сироп малина, мороженое, грейпфрутовый сок, <br>взбитые сливки, содовая</td></tr>
+                <tr><td class="opis">Сироп малина, грейпфрутовый сок, <br>взбитые сливки, содовая</td></tr>
                 <tr><td>Фолиевая кислота..........................................250мл./<strong>200р.</strong></td></tr>
                 <tr><td class="opis">Спрайт, лайм, мята, сироп сахар, лед</td></tr>
                 
@@ -226,6 +227,17 @@
                 <tr><td>Родий...............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Мороженое, молоко, ежевика,<br> взбитые сливки</td></tr>
             </table>
+            <br>
+            <table>
+                <caption>Прохладительные напитки</caption>
+                <tr><td>Фирменные лимонады............................1000мл./<strong>250р.</strong></td></tr>
+                <tr><td class="opis">Сироп на выбор</td></tr>
+                <tr><td>Сок Rich............................................................200мл./<strong>75р.</strong></td></tr>
+                <tr><td class="opis">На выбор: апельсин, яблоко, вишня, персик, ананас, грейпфрут, виноград</td></tr>
+                <tr><td>Coca-cola, Fanta, Sprite...............................330мл./<strong>150р.</strong></td></tr>
+                <tr><td class="opis"></td></tr>
+            </table>
+            <br>
             <table>
                 <caption>Пиво</caption>
                 <tr><td>Krusovice светлое.........................................450мл./<strong>180р.</strong></td></tr>
