--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </header>
         <main>
             <table class="zakus">
-                <caption>Закуски</caption>
-                <tr><td>Сырная тарелка..................................................250гр./<strong>350р.</strong></td></tr>
-                <tr><td class="opis">Моцарелла, пармезан, дор-блю</td></tr>
-                <tr><td>Мясная тарелка..................................................300гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">Буженина, куриный рулет, говядина европейская</td></tr>
-                <tr><td>Пивная тарелка..................................................300гр/<strong>320р.</strong></td></tr>
-                <tr><td class="opis">Баварские колбаски, чесночные гренки, сыр косичка</td></tr>
+                <caption>Закуски к пиву</caption>
+                <tr><td>Пивной сет №1....................................................135гр./<strong>190р.</strong></td></tr>
+                <tr><td class="opis">Соломка, фисташки, луковые кольца, арахис с васаби</td></tr>
+                <tr><td>Пивной сет №2....................................................140гр./<strong>190р.</strong></td></tr>
+                <tr><td class="opis">Фисташки, чипсы, арахис, гренки</td></tr>
+                <tr><td>Пивной сет №3....................................................280гр./<strong>260р.</strong></td></tr>
+                <tr><td class="opis">Колбаски охотничьи, квашенная капуста, чесночные гренки<br> Соус: хрен, горчица</td></tr>
             </table>
             <br>
             <table>
