--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
                 <tr><td class="opis">Соломка, фисташки, луковые кольца, арахис с васаби</td></tr>
                 <tr><td>Пивной сет №2....................................................140гр./<strong>190р.</strong></td></tr>
                 <tr><td class="opis">Фисташки, чипсы, арахис, гренки</td></tr>
-                <tr><td>Пивной сет №3....................................................280гр./<strong>260р.</strong></td></tr>
+                <tr><td>Пивной сет №3...................................................280гр./<strong>260р.</strong></td></tr>
                 <tr><td class="opis">Колбаски охотничьи, квашенная капуста, чесночные гренки<br> Соус: хрен, горчица</td></tr>
             </table>
             <br>
             <table>
                 <caption>Сендвичи</caption>
-                <tr><td>Двойные связи..................................................350гр./<strong>320р.</strong></td></tr>
+                <tr><td>Двойные связи..................................................350гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">Хлеб harry's, куриное филе, бекон, капуста пекинская, томат, <br>огурец, яйцо, сыр </td></tr>
-                <tr><td>Углеродные цепи.............................................350гр./<strong>300р.</strong></td></tr>
+                <tr><td>Углеродные цепи..............................................350гр./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Хлеб harry's, говяжья котлета, яйцо, сыр эменталлер,<br> томат, соус Тар-тар, соус барбекю, картофель фри</td></tr>
             </table>
             <br>
             <table>
                 <caption>Бургеры</caption>
-                <tr><td>Магистр наук........................................................400гр./<strong>300р.</strong></td></tr>
+                <tr><td>Магистр наук........................................................400гр./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, томат, сыр эменталлер,<br>соус Тар-тар, соус сырный, картофель фри</td></tr>
-                <tr><td>Угольный эксперимент.....................................400гр./<strong>350р.</strong></td></tr>
+                <tr><td>Угольный эксперимент.....................................400гр./<strong>330р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, огурец маринованный, томат,<br>сыр эменталлер, соус Тар-тар, соус брусничный, картофель фри</td></tr>
             </table>
             <br>
@@ -46,9 +46,7 @@
                 <tr><td>Маргарита..........................................................400гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">Соус, свежие томаты, моцарелла, прованские травы</td></tr>
                 <tr><td>Пеперони............................................................400гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">Соус, салями, помидоры, болгарский перец, моцарелла</td></tr>
-                <tr><td>Четыре сыра......................................................400гр./<strong>450р.</strong></td></tr>
-                <tr><td class="opis">Соус, сыр чеддер, пармезан, моцарелла, дор-блю,<br> прованские травы</td></tr>
+                <tr><td class="opis">Острый соус, салями, болгарский перец, моцарелла</td></tr>
                 <tr><td>Четыре сезона..................................................400гр./<strong>400р.</strong></td></tr>
                 <tr><td class="opis">Грибы, помидоры, салями, курица, моцарелла, соус</td></tr>
                 <tr><td>Гавайская...........................................................400гр./<strong>370р.</strong></td></tr>
@@ -65,38 +63,40 @@
                 <tr><td class="opis">Микс салата романо и айсберг, соус цезарь, <br> королевские креветки, помидоры черри, сухарики, <br> перепелиные яйца, пармезан</td></tr>
                 <tr><td>Греческий...........................................................200гр./<strong>220р.</strong></td></tr>
                 <tr><td class="opis">Свежие огурцы, помидоры, болгарский перец, маслины, <br>сыр фета, бальзамический уксус, сок лайма, <br> прованские травы, оливковое масло</td></tr>
+                <td>Cалат теплый с говядиной............................200гр./<strong>220р.</strong></td></tr>
+                <tr><td class="opis">Помидоры, красный лук, маслины, говяжья вырезка<br> бальзамический крем, прованские травы, кунжутная заправка</td></tr>
+                <tr><td>Салат Капрезе..................................................200гр./<strong>285р.</strong></td></tr>
+                <tr><td class="opis">Микс салата романо и айсберг, сыр моцарелла, свежие томаты,<br> соус песто, бальзамический крем, прованские травы, кедровый орех</td></tr>
+                <tr><td>Источник йода................................................320гр./<strong>260р.</strong></td></tr>
+                <tr><td class="opis">Филе сельди, маринованный лук, золотистый картофель,<br> свежая зелень</td></tr>
             </table>
             <br>
             <table >
                 <caption>Пасты</caption>
-                <tr><td>Карбонара.............................................................300гр./<strong>320р.</strong></td></tr>
+                <tr><td>Карбонара.............................................................300гр./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Бекон, сливки, пармезан, помидоры черри</td></tr>
-                <tr><td>С курицей и грибами........................................300гр./<strong>300р.</strong></td></tr>
+                <tr><td>С курицей и грибами........................................300гр./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Куриное филе, лук, шампиньоны, сливки, сыр, базилик</td></tr>
-                <tr><td>С морепродуктами............................................300гр./<strong>390р.</strong></td></tr>
-                <tr><td class="opis">Креветки королевские, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр, помидоры черри</td></tr>
             </table>
             <br>
             <table>
                 <caption>Супы</caption>
-                <tr><td>Том-Ям................................................................300гр./<strong>350р.</strong></td></tr>
-                <tr><td class="opis">Кольца кальмара, королевские креветки, морской гребешок,<br> филе дорадо, лемонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи,<br>лук, картофель, шампиньоны</td></tr><br>
-                <tr><td>Грибной..............................................................300гр./<strong>280р.</strong></td></tr>
-                <tr><td class="opis">Лук, шампиньоны, сливки, куриный бульон</td></tr>
-                <tr><td>Чечевичный.......................................................300гр./<strong>200р.</strong></td></tr>
-                <tr><td class="opis">Чечевица, картофель, морковь, чеснок, лук</td></tr>
-                <tr><td>Лапша.................................................................300гр./<strong>250р.</strong></td></tr>
+                <tr><td>Суп-гуляш с пюре................................................300гр./<strong>250р.</strong></td></tr>
+                <tr><td class="opis">Говядина, пюре,томатная паста, морковь, чеснок, лук</td></tr>
+                <tr><td>Лапша....................................................................300гр./<strong>230р.</strong></td></tr>
                 <tr><td class="opis">Куриный бульон, лапша домашняя, куриное филе, яйцо, зелень</td></tr>
-                <tr><td>Солянка..............................................................300гр./<strong>270р.</strong></td></tr>
+                <tr><td>Солянка.................................................................300гр./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Говядина по-европейски, салями, курица, томатная паста,<br> маслины, маринованные огурцы, лук</td></tr>
             </table>
             <br>
             <table>
                 <caption>Горячее</caption>
-                <tr><td>Белковый наполнитель....................................300гр./<strong>320р.</strong></td></tr>
+                <tr><td>Куриная грудка с овощами гриль.....................300гр./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Куриное филе, баклажан, цукини, перец болгарский, томат, <br>шампиньоны, соус брусничный</td></tr>
-                <tr><td>Бефстроганов с пюре........................................350гр./<strong>350р.</strong></td></tr>
+                <tr><td>Бефстроганов на картофельном дранике......330гр./<strong>400р.</strong></td></tr>
                 <tr><td class="opis">Говяжья вырезка, шампиньоны, картофель, шпинат,<br>лук, соус Демиглас</td></tr>
+                <tr><td>Оладьи из цукини с семгой...............................270гр./<strong>330р.</strong></td></tr>
+                <tr><td class="opis">Оладьи из цукини, слабосоленая семга,<br> соус Тар-тар</td></tr>
             </table>
             <br>
             <table>
@@ -156,8 +156,6 @@
                 <tr><td class="opis">Фруктовая смесь из кусочков ананаса и папайи в сахаре,<br> яблок, изюма, плодов шиповника, ягод вишни<br>с добавлением лепестков каркаде </td></tr>
                 <tr><td>Каркаде..........................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Арабский чайный напиток из цветков<br> суданской розы</td></tr
-                <tr><td>Райское яблоко............................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Фруктово-травяная смесь из кусочков яблок, ананаса, изюма,<br>с добавлением гибискуса и листьев бамбука</td></tr>
                 <tr><td>Тропики........................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Фруктовая смесь из кусочков клубники, манго, дыни, ананаса, яблок<br>с добавлением лепестков каркаде и ягод годж</td></tr
             </table>
@@ -170,12 +168,8 @@
                 <tr><td class="opis">Листовой зеленый чай с молочным послевкусием</td></tr>
                 <tr><td>Медовая дыня..............................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Китайский светлый улун с кусочками спелой дыни</td></tr>
-                <tr><td>Клюква и годжи..........................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Зеленый чай с добавлением ягод клюквы и годжи</td></tr>
                 <tr><td>Дикая вишня................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Зеленый чай с ягодами спелой вишни, клюквы, <br>листьями клубники и грецкого ореха</td></tr>
-                <tr><td>Сказочный....................................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Зеленый чай с кусочками клюквы, клубники<br> и лепестками роз</td></tr>
                 <tr><td>Жасминовый...............................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Китайский зеленый чай с цветами жасмин</td></tr>
             </table>
@@ -188,10 +182,6 @@
                 <tr><td class="opis">Черный чай с добавлением натурального<br> масла бергамота</td></tr>
                 <tr><td>Дикая вишня...............................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Черный чай с добавлением ягод вишни<br> и листьев клубники</td></tr>
-                <tr><td>Тысяча и одна ночь...................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Купаж черного и зеленого чая с добавлением изюма, кусочков папайи,<br> лепестков василька, розы и подсолнечника</td></tr>
-                <tr><td>Шоколадный...............................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Черный чай с добавлением кусочков<br> шоколада и какао</td></tr>
                 <tr><td>Пуэр..............................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Классический китайский черный пуэр</td></tr>
                 <tr><td>Вишнёвый пуэр.........................................800мл./<strong>270р.</strong></td></tr>
@@ -207,7 +197,7 @@
                 <tr><td>Калий...............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Мороженое, молоко, сироп блю кюрасао, <br>сироп гранат, банан, малина, мармелад,<br>взбитые сливки</td></tr>
                 <tr><td>Бром.................................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">Клубника, молоко, банан, сироп малина</td></tr>
+                <tr><td class="opis">Клубника, молоко, мороженое, банан, сироп малина</td></tr>
                 <tr><td>Цирконий.......................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">Молоко, мороженое, сироп карамель,<br> киви, банан</td></tr>
                 <tr><td>Олово...............................................................250мл./<strong>250р.</strong></td></tr>
