--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <tr><td class="opis">Фисташки, чипсы, арахис, гренки</td></tr>
                 <tr><td>Пивной сет №3...................................................280гр./<strong>260р.</strong></td></tr>
                 <tr><td class="opis">Колбаски охотничьи, квашенная капуста, чесночные гренки<br> Соус: хрен, горчица</td></tr>
+                <tr><td>Источник йода...................................................320гр./<strong>260р.</strong></td></tr>
+                <tr><td class="opis">Филе сельди, маринованный лук, золотистый картофель,<br> свежая зелень</td></tr>
             </table>
             <br>
             <table>
@@ -64,11 +66,9 @@
                 <tr><td>Греческий...........................................................200гр./<strong>220р.</strong></td></tr>
                 <tr><td class="opis">Свежие огурцы, помидоры, болгарский перец, маслины, <br>сыр фета, бальзамический уксус, сок лайма, <br> прованские травы, оливковое масло</td></tr>
                 <td>Cалат теплый с говядиной............................200гр./<strong>220р.</strong></td></tr>
-                <tr><td class="opis">Помидоры, красный лук, маслины, говяжья вырезка<br> бальзамический крем, прованские травы, кунжутная заправка</td></tr>
+                <tr><td class="opis">Помидоры, красный лук, маслины, говяжья вырезка<br> бальзамический крем, прованские травы,<br> кунжутная заправка</td></tr>
                 <tr><td>Салат Капрезе..................................................200гр./<strong>285р.</strong></td></tr>
-                <tr><td class="opis">Микс салата романо и айсберг, сыр моцарелла, свежие томаты,<br> соус песто, бальзамический крем, прованские травы, кедровый орех</td></tr>
-                <tr><td>Источник йода................................................320гр./<strong>260р.</strong></td></tr>
-                <tr><td class="opis">Филе сельди, маринованный лук, золотистый картофель,<br> свежая зелень</td></tr>
+                <tr><td class="opis">Микс салата романо и айсберг, сыр моцарелла,<br> свежие томаты, соус песто, бальзамический крем,<br> прованские травы, кедровый орех</td></tr>
             </table>
             <br>
             <table >
